cleaned build script.

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,71 +3,47 @@
 
 # OS-specific configurations
 ifeq ($(OS),Windows_NT)
-	PYTHON_exe = /c/Users/sunt05/Anaconda2/python.exe
-	# F2PY_PY= /c/Users/sunt05/Anaconda2/Scripts/f2py.py
-	# F2PY_EXE = $(PYTHON) $(F2PY_PY)
-	TARGET=$(MODULE).pyd
+	PYTHON_exe = python.exe
+
 else
 	UNAME_S := $(shell uname -s)
-	TARGET=$(MODULE).so
+
 
 	ifeq ($(UNAME_S),Linux) # Linux
 		PYTHON_exe=python
-		# F2PY_EXE = f2py
+
 	endif
 
 	ifeq ($(UNAME_S),Darwin) # macOS
 		PYTHON_exe=python
-		# F2PY_EXE = f2py
+
 	endif
 
 endif
 
-MODULE=SUEWS_driver
 
-SUEWS_dir = suews/SUEWS-SourceCode
 
 PYTHON := $(if $(PYTHON_exe),$(PYTHON_exe),python)
 # All the files which include modules used by other modules (these therefore
 # need to be compiled first)
-FILES = SUEWS_const.f95  \
-				SUEWS_driver.f95
 
+MODULE = supy
 
-# make fortran exe
 main:
-	$(MAKE) -C $(SUEWS_dir) clean; # clean Fortran SUEWS build
-	$(MAKE) -C $(SUEWS_dir) main; # make SUEWS with the `main` recipe
-	-rm -rf *.o *.mod *.f95 *.a *.dSYM
+	$(MAKE) clean
+	${PYTHON} setup.py bdist_wheel test
 
 # make fortran exe and run test cases
-check:
-	$(MAKE) -C $(SUEWS_dir) clean; # clean Fortran SUEWS build
-	$(MAKE) -C $(SUEWS_dir) check; # make SUEWS with the `main` recipe
-	-rm -rf *.o *.mod *.f95 *.a *.dSYM
+test:
+	${PYTHON} setup.py test
 
-# make supy dist
-supy:
-	$(info $$PYTHON is [${PYTHON}])
-	$(MAKE) -C $(SUEWS_dir) clean; # clean Fortran SUEWS build
-	$(MAKE) -C $(SUEWS_dir) main; # make SUEWS with the `main` recipe
-	$(PYTHON) setup.py bdist_wheel # all f2py compilation is done by `setup.py`
-	-rm -rf *.o *.mod *.f95 *.a *.dSYM
 
 # If wanted, clean all *.o files after build
 clean:
-	$(MAKE) -C $(SUEWS_dir) clean;
-	 -rm -rf *.o *.mod *.dSYM $(TARGET) supy/$(MODULE).*;
-	 -$(PYTHON) setup.py clean --all
+	rm -rf ${MODULE}/*.so ${MODULE}/*.pyc ${MODULE}/__pycache__ ${MODULE}/*.dSYM
+	rm -rf ${MODULE}/test/*.pyc ${MODULE}/test/__pycache__
 
-# clean all existing builds, rebuild f2py libs, build wheels and test
-test-supy:
-	$(MAKE) clean;
-	$(MAKE) supy;
-	$(PYTHON) setup.py test
 
-# clean all existing builds, rebuild f2py libs, build wheels and submit
-pip:
-	$(MAKE) clean;
-	$(MAKE) supy;
-	$(PYTHON) setup.py bdist_wheel upload
+# upload wheels to pypi using twine
+upload:
+	@echo $(shell twine upload --skip-existing dist/*whl)
