--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,10 +24,11 @@ jobs:
       versionSpec: '$(python.version)'
       architecture: 'x64'
 
-  - script: python -m pip install --upgrade pip && pip install -r requirements.txt
-    displayName: 'Install dependencies'
+  # - script: python -m pip install --upgrade pip && pip install -r requirements.txt
+  #   displayName: 'Install dependencies'
 
   - script: |
+      cd src
       pip install pytest
       pytest tests --doctest-modules --junitxml=junit/test-results.xml
     displayName: 'pytest'
