--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,9 +5,9 @@
 
 jobs:
 
-- job: 'Test'
+- job:                  'Test'
   pool:
-    vmImage: 'Ubuntu 16.04'
+    vmImage:            'Ubuntu 16.04'
   strategy:
     matrix:
       Python35:
@@ -16,39 +16,41 @@ jobs:
         python.version: '3.6'
       Python37:
         python.version: '3.7'
-    maxParallel: 4
+    maxParallel:        4
 
   steps:
-  - task: UsePythonVersion@0
+  - task:               UsePythonVersion@0
     inputs:
-      versionSpec: '$(python.version)'
-      architecture: 'x64'
+      versionSpec:      '$(python.version)'
+      architecture:     'x64'
 
-  # - script: python -m pip install --upgrade pip && pip install -r requirements.txt
-  #   displayName: 'Install dependencies'
+  # - script:           python -m pip install --upgrade pip && pip install -r requirements.txt
+  #   displayName:      'Install dependencies'
 
-  - script: |
+  - script:             |
       cd src
       pip install pytest
       pytest tests --doctest-modules --junitxml=junit/test-results.xml
-    displayName: 'pytest'
+    displayName:        'pytest'
 
-  - task: PublishTestResults@2
+  - task:               PublishTestResults@2
     inputs:
       testResultsFiles: '**/test-results.xml'
-      testRunTitle: 'Python $(python.version)'
-    condition: succeededOrFailed()
+      testRunTitle:     'Python $(python.version)'
+    condition:          succeededOrFailed()
 
-- job: 'Publish'
-  dependsOn: 'Test'
+- job:                  'Publish'
+  dependsOn:            'Test'
   pool:
-    vmImage: 'Ubuntu 16.04'
+    vmImage:            'Ubuntu 16.04'
 
   steps:
-  - task: UsePythonVersion@0
+  - task:               UsePythonVersion@0
     inputs:
-      versionSpec: '3.x'
-      architecture: 'x64'
+      versionSpec:      '3.x'
+      architecture:     'x64'
 
-  - script: python setup.py bdist_wheel
-    displayName: 'Build bdist_wheel'
+  - script:             |
+      cd src
+      python setup.py bdist_wheel
+    displayName:        'Build bdist_wheel'
