--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,5 +52,5 @@ jobs:
 
   - script:             |
       cd src
-      python setup.py bdist_wheel
-    displayName:        'Build bdist_wheel'
+      make test
+    displayName:        'test supy'
