--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,14 +24,18 @@ jobs:
       versionSpec:      '$(python.version)'
       architecture:     'x64'
 
-  # - script:           python -m pip install --upgrade pip && pip install -r requirements.txt
-  #   displayName:      'Install dependencies'
+  - script:           |
+  python -m pip install --upgrade pip
+  pip install pipreqs
+  pipreqs src
+  pip install -r requirements.txt
+    displayName:      'Install dependencies'
 
-  # - script:             |
-  #     cd src
-  #     pip install pytest
-  #     pytest tests --doctest-modules --junitxml=junit/test-results.xml
-  #   displayName:        'pytest'
+  - script:             |
+      cd src
+      make test
+      pytest tests --doctest-modules --junitxml=junit/test-results.xml
+    displayName:        'pytest'
   #
   # - task:               PublishTestResults@2
   #   inputs:
@@ -39,18 +43,18 @@ jobs:
   #     testRunTitle:     'Python $(python.version)'
   #   condition:          succeededOrFailed()
 
-- job:                  'Publish'
-  dependsOn:            'Test'
-  pool:
-    vmImage:            'Ubuntu 16.04'
-
-  steps:
-  - task:               UsePythonVersion@0
-    inputs:
-      versionSpec:      '3.x'
-      architecture:     'x64'
-
-  - script:             |
-      cd src
-      make test
-    displayName:        'test supy'
+# - job:                  'Publish'
+#   dependsOn:            'Test'
+#   pool:
+#     vmImage:            'Ubuntu 16.04'
+#
+#   steps:
+#   - task:               UsePythonVersion@0
+#     inputs:
+#       versionSpec:      '3.x'
+#       architecture:     'x64'
+#
+#   - script:             |
+#       cd src
+#       make test
+#     displayName:        'test supy'
