--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,33 +24,37 @@ jobs:
       versionSpec:      '$(python.version)'
       architecture:     'x64'
 
-  # - script:           python -m pip install --upgrade pip && pip install -r requirements.txt
-  #   displayName:      'Install dependencies'
-
-  # - script:             |
-  #     cd src
-  #     pip install pytest
-  #     pytest tests --doctest-modules --junitxml=junit/test-results.xml
-  #   displayName:        'pytest'
-  #
-  # - task:               PublishTestResults@2
-  #   inputs:
-  #     testResultsFiles: '**/test-results.xml'
-  #     testRunTitle:     'Python $(python.version)'
-  #   condition:          succeededOrFailed()
-
-- job:                  'Publish'
-  dependsOn:            'Test'
-  pool:
-    vmImage:            'Ubuntu 16.04'
-
-  steps:
-  - task:               UsePythonVersion@0
-    inputs:
-      versionSpec:      '3.x'
-      architecture:     'x64'
+  - script:             |
+      python -m pip install --upgrade pip
+      pip install pipreqs
+      pipreqs src
+      pip install -r requirements.txt
+    displayName:        'Install dependencies'
 
   - script:             |
       cd src
       make test
-    displayName:        'test supy'
+      pytest tests --doctest-modules --junitxml=junit/test-results.xml
+    displayName:        'pytest'
+  #
+  # - task:             PublishTestResults@2
+  #   inputs:
+  #     testResultsFiles: '**/test-results.xml'
+  #     testRunTitle:   'Python $(python.version)'
+  #   condition:        succeededOrFailed()
+
+# - job:                'Publish'
+#   dependsOn:          'Test'
+#   pool:
+#     vmImage:          'Ubuntu 16.04'
+#
+#   steps:
+#   - task:             UsePythonVersion@0
+#     inputs:
+#       versionSpec:    '3.x'
+#       architecture:   'x64'
+#
+#   - script:           |
+#       cd src
+#       make test
+#     displayName:      'test supy'
