--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,13 +28,12 @@ jobs:
       python -m pip install --upgrade pip
       pip install pipreqs
       pipreqs src
-      pip install -r requirements.txt
+      pip install -r src/requirements.txt
     displayName:        'Install dependencies'
 
   - script:             |
       cd src
       make test
-      pytest tests --doctest-modules --junitxml=junit/test-results.xml
     displayName:        'pytest'
   #
   # - task:             PublishTestResults@2
