--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ jobs:
   #     testRunTitle:   'Python $(python.version)'
   #   condition:        succeededOrFailed()
 
-- job:                  ''Test Docs'
+- job:                  'Test Docs'
   dependsOn:            'Test'
   pool:
     vmImage:            'Ubuntu 16.04'
