--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,16 @@
-pandas==0.23.4
-supy_driver>=2018b16
-supy>=2018.12.21
 numpy==1.15.4
+nbsphinx==0.3.5
+nbconvert==5.3.1
+nbformat==4.4.0
+nbsphinx==0.3.5
+docutils==0.14
+Sphinx==1.8.1
+sphinx-autobuild==0.7.1
+sphinx-rtd-theme==0.4.2
+sphinxcontrib-websupport==1.1.0
+ipykernel==4.8.2
+sympy
+jinja2>=2.10
+traitlets>=4.3.2
+pandas>=0.23.4
+supy>=2018.12.21
