--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,9 +5,9 @@
 
 jobs:
 
-- job:                  'Test'
+- job:                  'Test-Ubuntu'
   pool:
-    vmImage:            'Ubuntu 16.04'
+    vmImage:            'ubuntu-16.04'
   strategy:
     matrix:
       Python35:
@@ -35,6 +35,69 @@ jobs:
       cd src
       make test
     displayName:        'pytest'
+
+- job:                  'Test-macOS'
+  pool:
+    vmImage:            'macOS-10.13'
+  strategy:
+    matrix:
+      Python35:
+        python.version: '3.5'
+      Python36:
+        python.version: '3.6'
+      Python37:
+        python.version: '3.7'
+    maxParallel:        4
+
+  steps:
+  - task:               UsePythonVersion@0
+    inputs:
+      versionSpec:      '$(python.version)'
+      architecture:     'x64'
+
+  - script:             |
+      python -m pip install --upgrade pip
+      pip install pipreqs
+      pipreqs src
+      pip install -r src/requirements.txt
+    displayName:        'Install dependencies'
+
+  - script:             |
+      cd src
+      make test
+    displayName:        'pytest'
+
+
+  - job:                  'Test-windows'
+    pool:
+      vmImage:            'vs2017-win2016'
+    strategy:
+      matrix:
+        Python35:
+          python.version: '3.5'
+        Python36:
+          python.version: '3.6'
+        Python37:
+          python.version: '3.7'
+      maxParallel:        4
+
+    steps:
+    - task:               UsePythonVersion@0
+      inputs:
+        versionSpec:      '$(python.version)'
+        architecture:     'x64'
+
+    - bash:             |
+        python -m pip install --upgrade pip
+        pip install pipreqs
+        pipreqs src
+        pip install -r src/requirements.txt
+      displayName:        'Install dependencies'
+
+    - bash:             |
+        cd src
+        make test
+      displayName:        'pytest'
   #
   # - task:             PublishTestResults@2
   #   inputs:
