--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,6 +57,8 @@ jobs:
       architecture:     'x64'
 
   - script:             |
+      mkdir -p ~/.matplotlib
+      touch ~/.matplotlib/matplotlibrc
       echo "backend: TkAgg" >> ~/.matplotlib/matplotlibrc
       python -m pip install --upgrade pip
       pip install pipreqs
