--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@
 
 jobs:
 
-- job:                'Test_Ubuntu'
+- job:                'Build_Test_Ubuntu'
   pool:
     vmImage:          'ubuntu-16.04'
   strategy:
@@ -38,7 +38,7 @@ jobs:
     displayName:      'pytest'
 
 
-- job:                  'Test_macOS'
+- job:                  'Build_Test_macOS'
   pool:
     vmImage:            'macOS-10.13'
   strategy:
@@ -73,7 +73,7 @@ jobs:
     displayName:        'pytest'
 
 
-- job:                  'Test_windows'
+- job:                  'Build_Test_Windows'
   pool:
     vmImage:            'vs2017-win2016'
   strategy:
@@ -110,8 +110,8 @@ jobs:
   #     testRunTitle:   'Python $(python.version)'
   #   condition:        succeededOrFailed()
 
-- job:                  'Docs'
-  dependsOn:            'Test_Ubuntu'
+- job:                  'Build_Test_Docs'
+  dependsOn:            'Build_Test_Ubuntu'
   pool:
     vmImage:            'Ubuntu 16.04'
   strategy:
