--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,6 +78,7 @@ jobs:
       externalFeeds: 'PyPI'
 
   - script:  |
+      pip3 install twine
       twine upload -r SuPy --config-file $(PYPIRC_PATH) --skip-existing supy-driver/dist/*whl
     displayName:        'upload supy'
     continueOnError:    true
