--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ jobs:
     displayName:      'pytest'
 
 
-- job:                  'Build_Test_Upload_macOS'
+- job:                  'Build_Test_macOS'
   pool:
     vmImage:            'macOS-10.13'
   strategy:
@@ -49,7 +49,7 @@ jobs:
         python.version: '3.6'
       Python37:
         python.version: '3.7'
-    maxParallel:        4
+    maxParallel:        2
 
   steps:
   - task:               UsePythonVersion@0
@@ -72,18 +72,18 @@ jobs:
       make test
     displayName:        'pytest'
 
-  - task: TwineAuthenticate@0
-    inputs:
-      # artifactFeeds: 'feed_name1, feed_name2'
-      externalFeeds: 'PyPI'
+  # - task: TwineAuthenticate@0
+  #   inputs:
+  #     # artifactFeeds: 'feed_name1, feed_name2'
+  #     externalFeeds: 'PyPI'
 
-  - script:  |
-      pip3 install twine wheel
-      cd src
-      make
-      twine upload -r SuPy --config-file $(PYPIRC_PATH) --skip-existing dist/*whl
-    displayName:        'upload supy'
-    continueOnError:    true
+  # - script:  |
+  #     pip3 install twine wheel
+  #     cd src
+  #     make
+  #     twine upload -r SuPy --config-file $(PYPIRC_PATH) --skip-existing dist/*whl
+  #   displayName:        'upload supy'
+  #   continueOnError:    true
 
 
 - job:                  'Build_Test_Windows'
@@ -148,3 +148,51 @@ jobs:
       sudo apt-get install pandoc
       make html
     displayName:        'test docs'
+
+- job:                  'Upload_macOS'
+  pool:
+    vmImage:            'macOS-10.13'
+  strategy:
+    matrix:
+      # Python35:
+      #   python.version: '3.5'
+      # Python36:
+      #   python.version: '3.6'
+      Python37:
+        python.version: '3.7'
+    maxParallel:        2
+
+  steps:
+  - task:               UsePythonVersion@0
+    inputs:
+      versionSpec:      '$(python.version)'
+      architecture:     'x64'
+
+  - script:             |
+      mkdir -p ~/.matplotlib
+      touch ~/.matplotlib/matplotlibrc
+      echo "backend:    TkAgg" >> ~/.matplotlib/matplotlibrc
+      python -m pip install --upgrade pip
+      pip install pipreqs
+      pipreqs src
+      pip install -r src/requirements.txt
+    displayName:        'Install dependencies'
+
+  - script:             |
+      cd src
+      make test
+    displayName:        'pytest'
+
+  - task: TwineAuthenticate@0
+    inputs:
+      # artifactFeeds: 'feed_name1, feed_name2'
+      externalFeeds: 'PyPI'
+
+  - script:  |
+      pip3 install twine wheel
+      cd src
+      make
+      twine upload -r SuPy --config-file $(PYPIRC_PATH) --skip-existing dist/*whl
+    displayName:        'upload supy'
+    continueOnError:    true
+
