--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,7 @@ jobs:
         python.version: '3.6'
       Python37:
         python.version: '3.7'
-    maxParallel:        2
+    maxParallel:        1
 
   steps:
   - task:               UsePythonVersion@0
@@ -72,18 +72,18 @@ jobs:
       make test
     displayName:        'pytest'
 
-  # - task: TwineAuthenticate@0
-  #   inputs:
-  #     # artifactFeeds: 'feed_name1, feed_name2'
-  #     externalFeeds: 'PyPI'
+  - task: TwineAuthenticate@0
+    inputs:
+      # artifactFeeds: 'feed_name1, feed_name2'
+      externalFeeds: 'PyPI'
 
-  # - script:  |
-  #     pip3 install twine wheel
-  #     cd src
-  #     make
-  #     twine upload -r SuPy --config-file $(PYPIRC_PATH) --skip-existing dist/*whl
-  #   displayName:        'upload supy'
-  #   continueOnError:    true
+  - script:  |
+      pip3 install twine wheel
+      cd src
+      make
+      twine upload -r SuPy --config-file $(PYPIRC_PATH) --skip-existing dist/*whl
+    displayName:        'upload supy'
+    continueOnError:    true
 
 
 - job:                  'Build_Test_Windows'
