--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -183,6 +183,11 @@ jobs:
       make test
     displayName:        'pytest'
 
+  # Python Twine Upload Authenticate
+  # Authentication for uploading Python distributions using twine.
+  # Please add '-r FeedName/EndpointName --config-file $(PYPIRC_PATH)' to your twine upload command.
+  # For feeds present in this organization, use the feed name as the repository (-r).
+  # Otherwise, use the endpoint name defined in the service connection.
   - task: TwineAuthenticate@0
     inputs:
       # artifactFeeds: 'feed_name1, feed_name2'
@@ -192,6 +197,7 @@ jobs:
       pip3 install twine wheel
       cd src
       make
+      cat $(PYPIRC_PATH)
       twine upload -r SuPy --config-file $(PYPIRC_PATH) --skip-existing dist/*whl
     displayName:        'upload supy'
     continueOnError:    true
