drop support for python 3.5 due to un-reproducible errors

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,8 @@ jobs:
   strategy:
     maxParallel:      4
     matrix:
-      Python35:
-        python.version: '3.5'
+      # Python35:
+      #   python.version: '3.5'
       Python36:
         python.version: '3.6'
       Python37:
@@ -43,8 +43,8 @@ jobs:
     vmImage:            'macOS-10.13'
   strategy:
     matrix:
-      Python35:
-        python.version: '3.5'
+      # Python35:
+      #   python.version: '3.5'
       Python36:
         python.version: '3.6'
       Python37:
@@ -91,8 +91,8 @@ jobs:
     vmImage:            'vs2017-win2016'
   strategy:
     matrix:
-      Python35:
-        python.version: '3.5'
+      # Python35:
+      #   python.version: '3.5'
       Python36:
         python.version: '3.6'
       Python37:
