--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 numpy>=1.15.4
-nbsphinx==0.3.5
-nbconvert==5.3.1
-nbformat==4.4.0
+nbsphinx>=0.3.5
+nbconvert>=5.3.1
+nbformat>=4.4.0
 nbsphinx==0.3.5
 docutils==0.14
-Sphinx==1.8.1
-sphinx-autobuild==0.7.1
-sphinx-rtd-theme==0.4.2
-sphinxcontrib-websupport==1.1.0
-ipykernel==4.8.2
+Sphinx>=1.8.1
+sphinx-autobuild>=0.7.1
+sphinx-rtd-theme>=0.4.2
+sphinxcontrib-websupport>=1.1.0
+ipykernel>=4.8.2
 sympy
 jinja2>=2.10
 traitlets>=4.3.2
