--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ numpy>=1.15.4
 nbsphinx>=0.3.5
 nbconvert>=5.3.1
 nbformat>=4.4.0
-nbsphinx==0.3.5
-docutils==0.14
+docutils>=0.14
 Sphinx>=1.8.1
 sphinx-autobuild>=0.7.1
 sphinx-rtd-theme>=0.4.2
