--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ jobs:
       architecture:   'x64'
 
   - script:           |
-      python -m pip install --upgrade pip
+      python -m pip install --upgrade pip==18.1
       pip install pipreqs
       pipreqs src
       pip install -r src/requirements.txt
