--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,8 +26,9 @@ jobs:
       architecture:   'x64'
 
   - script:           |
-      python -m pip install --upgrade pip==18.1
+      python -m pip install --upgrade
       pip install pipreqs
+      pip install git+git://github.com/atmos-python/atmos#egg=atmos
       pipreqs src
       pip install -r src/requirements.txt
     displayName:      'Install dependencies'
@@ -63,6 +64,7 @@ jobs:
       echo "backend:    TkAgg" >> ~/.matplotlib/matplotlibrc
       python -m pip install --upgrade pip
       pip install pipreqs
+      pip install git+git://github.com/atmos-python/atmos#egg=atmos
       pipreqs src
       pip install -r src/requirements.txt
     displayName:        'Install dependencies'
@@ -108,6 +110,7 @@ jobs:
   - bash:               |
       python -m pip install --upgrade pip
       pip install pipreqs
+      pip install git+git://github.com/atmos-python/atmos#egg=atmos
       pipreqs src
       pip install -r src/requirements.txt
     displayName:        'Install dependencies'
