--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,8 @@ jobs:
   - script:           |
       python -m pip install --upgrade
       pip install pipreqs
-      pip install git+git://github.com/atmos-python/atmos#egg=atmos
+      conda install -c mcgibbon atmos
+      # pip install git+git://github.com/atmos-python/atmos#egg=atmos
       pipreqs src
       pip install -r src/requirements.txt
     displayName:      'Install dependencies'
@@ -64,7 +65,8 @@ jobs:
       echo "backend:    TkAgg" >> ~/.matplotlib/matplotlibrc
       python -m pip install --upgrade pip
       pip install pipreqs
-      pip install git+git://github.com/atmos-python/atmos#egg=atmos
+      conda install -c mcgibbon atmos
+      # pip install git+git://github.com/atmos-python/atmos#egg=atmos
       pipreqs src
       pip install -r src/requirements.txt
     displayName:        'Install dependencies'
@@ -110,7 +112,8 @@ jobs:
   - bash:               |
       python -m pip install --upgrade pip
       pip install pipreqs
-      pip install git+git://github.com/atmos-python/atmos#egg=atmos
+      conda install -c mcgibbon atmos
+      # pip install git+git://github.com/atmos-python/atmos#egg=atmos
       pipreqs src
       pip install -r src/requirements.txt
     displayName:        'Install dependencies'
