--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -146,6 +146,8 @@ jobs:
       architecture:     'x64'
 
   - script:             |
+      python -m pip install --upgrade pip
+      pip install pipreqs
       cd docs
       sudo apt-get install pandoc
       make html
