--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ jobs:
       pip install pipreqs
       pipreqs src
       cat src/requirements.txt
-      pip install -r src/requirements.txt --upgrade
+      pip install -r src/requirements.txt
     displayName:      'Install dependencies'
 
   - script:           |
@@ -66,7 +66,7 @@ jobs:
       pip install pipreqs
       pipreqs src
       cat src/requirements.txt
-      pip install -r src/requirements.txt
+      conda install --file src/requirements.txt -y
     displayName:        'Install dependencies'
 
   - script:             |
