--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,8 @@ jobs:
       pip install pipreqs
       pipreqs src
       cat src/requirements.txt
-      conda install --file src/requirements.txt -y
+      pip install -r src/requirements.txt
+      pip install dask[complete] --upgrade
     displayName:        'Install dependencies'
 
   - script:             |
