--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,5 +4,22 @@ build:
   image: latest
 
 python:
-  version: 3.6
-  setup_py_install: false
+   version: 3.7
+   install:
+      - requirements: docs/requirements.txt
+      # - method: pip
+      #   path: src
+      #   extra_requirements:
+      #       - docs
+      - method: setuptools
+        path: src
+   system_packages: true
+
+formats:
+  - epub
+  - pdf
+
+sphinx:
+  builder: html
+  configuration: docs/conf.py
+  fail_on_warning: false
