--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ jobs:
 
   - script:           |
       python -m pip install --upgrade
-      pip install pipreqs
+      pip install pipreqs pytest
       pipreqs src
       cat src/requirements.txt
       pip install -r src/requirements.txt
@@ -64,7 +64,7 @@ jobs:
       touch ~/.matplotlib/matplotlibrc
       echo "backend:    TkAgg" >> ~/.matplotlib/matplotlibrc
       python -m pip install --upgrade pip
-      pip install pipreqs
+      pip install pipreqs pytest
       pipreqs src
       cat src/requirements.txt
       pip install -r src/requirements.txt
@@ -111,7 +111,7 @@ jobs:
 
   - bash:               |
       python -m pip install --upgrade pip
-      pip install pipreqs
+      pip install pipreqs pytest
       pipreqs src
       pip install -r src/requirements.txt
       pip install dask[complete] --upgrade
