--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@
 
 jobs:
 
-- job:                'Build_Test_Ubuntu'
+- job:                'Build_Test_Ubuntu_1604'
   pool:
     vmImage:          'ubuntu-16.04'
   strategy:
@@ -39,6 +39,39 @@ jobs:
       make test
     displayName:      'pytest'
 
+- job:                'Build_Test_Ubuntu_1804'
+  pool:
+    vmImage:          'ubuntu-18.04'
+  strategy:
+    maxParallel:      4
+    matrix:
+      # Python35:
+      #   python.version: '3.5'
+      Python36:
+        python.version: '3.6'
+      Python37:
+        python.version: '3.7'
+
+
+  steps:
+  - task:             UsePythonVersion@0
+    inputs:
+      versionSpec:    '$(python.version)'
+      architecture:   'x64'
+
+  - script:           |
+      python -m pip install --upgrade
+      pip install pipreqs pytest
+      pipreqs src
+      cat src/requirements.txt
+      pip install -r src/requirements.txt
+      pip install dask[complete] --upgrade
+    displayName:      'Install dependencies'
+
+  - script:           |
+      cd src
+      make test
+    displayName:      'pytest'
 
 - job:                  'Build_Test_Upload_macOS'
   pool:
