--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -24,5 +24,5 @@ formats:
 
 sphinx:
   builder: html
-  configuration: docs/conf.py
+  configuration: docs/source/conf.py
   fail_on_warning: false
